# rules_lambda

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  def.bzl  go.mod  go.sum
.bcr/: metadata.template.json  source.template.json
.github/workflows/: release_prep.sh
cmd/tar2zip/: BUILD.bazel  tar2zip.go
cmd/update-function-code/: BUILD.bazel  update-function-code.go
e2e/smoke/: BUILD  MODULE.bazel  WORKSPACE.bazel
internal/: BUILD.bazel  tar2zip.bzl
internal/tests/: BUILD.bazel  can_convert_from_targz_to_zip.sh
rules_lambda/: BUILD.bazel  defs.bzl
rules_lambda/private/: BUILD.bazel  lambda.bzl  lambda_update_wrapper.sh  tar2zip.bzl  targz2tar.bzl
rules_lambda/private/cmd/targz2tar/: BUILD.bazel  targz2tar.go
rules_lambda/private/cmd/update-function-code/: update-function-code.go
rules_lambda/private/tests/: BUILD.bazel
rules_lambda/tests/: BUILD.bazel  can_convert_from_targz_to_zip.sh
