module(
    name = "rules_lambda",
)

bazel_dep(name = "rules_go", version = "0.39.0")
bazel_dep(name = "gazelle", version = "0.30.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(
    go_mod = "go.mod",
)

bazel_dep(name = "buildifier_prebuilt", version = "6.0.0.1")
bazel_dep(name = "rules_pkg", version = "0.9.0")
bazel_dep(name = "bazel_skylib", version = "1.4.1")
