module(
    name = "com_booking_rules_lambda",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(name = "rules_go", version = "0.39.0")
bazel_dep(name = "gazelle", version = "0.30.0")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "buildifier_prebuilt", version = "6.0.0.1", dev_dependency = True)
bazel_dep(name = "rules_pkg", version = "0.9.0")
bazel_dep(name = "aspect_bazel_lib", version = "1.30.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(
    go_mod = "go.mod",
)
use_repo(
    go_deps,
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_service_lambda",
)
