load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# For stardoc to reference the files
exports_files(["defs.bzl"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//rules_lambda/private:lambda",
        "//rules_lambda/private:tar2zip",
        "//rules_lambda/private:targz2tar",
    ],
)
