load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tar2zip_lib",
    srcs = ["tar2zip.go"],
    importpath = "main/cmd/tar2zip",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "tar2zip",
    embed = [":tar2zip_lib"],
    visibility = ["//visibility:public"],
)
