load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "update-function-code_lib",
    srcs = ["update-function-code.go"],
    importpath = "main/cmd/update-function-code",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_lambda//:lambda",
        "@com_github_aws_aws_sdk_go_v2_service_lambda//types",
    ],
)

go_binary(
    name = "update-function-code",
    embed = [":update-function-code_lib"],
    visibility = ["//visibility:public"],
)
