load("@//internal:targz2tar.bzl", "targz2tar")
load("@//internal:tar2zip.bzl", "tar2zip")

targz2tar(
    name = "test_tar",
    input = "@test_tar_gz//file",
)

tar2zip(
    name = "test_zip",
    compress = False,
    input = ":test_tar",
)

sh_test(
    name = "can_convert_from_targz_to_zip",
    size = "small",
    srcs = [
        "can_convert_from_targz_to_zip.sh",
    ],
    data = [
        ":test_tar",
        ":test_zip",
    ],
)
